--- a/Ep10_JoDikhtaHaiWoBiktaHai/package.json
+++ b/Ep10_JoDikhtaHaiWoBiktaHai/package.json
@@ -10,9 +10,11 @@
   "author": "Anuj Jha",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "parcel": "^2.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
