--- a/Ep10_JoDikhtaHaiWoBiktaHai/package.json
+++ b/Ep10_JoDikhtaHaiWoBiktaHai/package.json
@@ -2,10 +2,10 @@
   "name": "ep10",
   "version": "1.0.0",
   "description": "1- React Advantages     - Why we are using when we cna build using html,css ,js because it make our work easier and provide devloper better features.     - Break your app.js into multiple files like every components has separate file",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "author": "Anuj Jha",
   "license": "ISC",
